# AR_Drone-Custom_teleop

./: README.md  classifier_no_preprocess.svm
P4GUI/: CMakeLists.txt  README.md  package.xml
P4GUI/src/: mainGUI.cpp
custom_keyboard/: CMakeLists.txt  README.md  package.xml
custom_keyboard/src/: teleop_twist_keyboard.py
depthDetection/: CMakeLists.txt  package.xml
depthDetection/depthDetection/: CMakeLists.txt
depthDetection/depthDetection/scripts/: python_sub_pub.py
depthDetection/depthDetection/src/: classifier.svm  collect_data.cpp  depthDetect.cpp  depthImage.cpp  depthImage.h  flip_images.cpp  preProcess.cpp  reportVisualized.cpp  segment.cpp  sort.cpp  test.cpp  trainClassifier.cpp
depthDetection/src/: HOG.cpp  HOG.h  collect_data.cpp  depthDetect.cpp  preProcess.cpp  preProcess.h  sampleData.cpp  sort.cpp  test.cpp  trainClassifier.cpp  trainClassifier0.cpp
drift_pkg/: CMakeLists.txt  drift_inf  package.xml
drift_pkg/scripts/: v1_drift.py
i_tongue_pkg/: CMakeLists.txt  Patch Notes
i_tongue_pkg/scripts/: iTongue_pub.py
i_tongue_pkg2/launch/: tongue_controller.launch
i_tongue_pkg_f/: package.xml
i_tongue_pkg_f/scripts/: iTongue_pub.py  image.py
obstacle_avoidance/: CMakeLists.txt  package.xml
obstacle_avoidance/src/: listener.cpp  obstacle_avoidance.cpp
pico_flexx_python/: CMakeLists.txt  Setup Guide  package.xml
pico_flexx_python/launch/: pico_flexx.launch
pico_flexx_python/scripts/: sample_retrieve_data.py
